Fix animated stripes background not aligned on tables

--- a/src/styles/_apps_base.sass
+++ b/src/styles/_apps_base.sass
@@ -211,6 +211,7 @@ nav.sidebar
 	.table-row
 		display: table-row
 		position: relative
+		background-attachment: fixed // for stripes to look nice
 
 	.table-head
 		display: table-header-group
